product category slider implemented

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 :root {
   --yellow800: #ccad00;
   --yellow700: #f5d000;
@@ -8,11 +11,13 @@
   --yellow200: #fff6c2;
   --yellow100: #fffceb;
   --base-dark: #000000;
-  --gray800: #666666;
-  --gray700: #999999;
-  --gray600: #cccccc;
-  --gray500: #dddddd;
-  --gray400: #eeeeee;
+
+  --gray900: #666666;
+  --gray800: #999999;
+  --gray700: #cccccc;
+  --gray600: #dddddd;
+  --gray500: #eeeeee;
+  --gray400: #e8e8e8;
   --gray300: #f2f2f2;
   --gray200: #fcfcfc;
   --gray100: #f7f7f7;
@@ -34,6 +39,17 @@
   --maroon300: #f4a4a4;
   --maroon200: #ffdfdf;
   --maroon100: #fff5f5;
+  /* RGB */
+  --base-dark-200-rgb: 54, 54, 54;
+  --base-dark-rgb: 0, 0, 0;
+  /* white */
+
+  --white-200-rgb: 255, 255, 255;
+  --white-100-rgb: 248, 248, 248;
+  /* grey */
+  --gray-900-rgb: 105, 105, 105;
+  --grey-200-rgb: 31, 31, 31;
+  --grey-100-rgb: 28, 28, 28;
 }
 /*! normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css */
 html {
@@ -231,4 +247,64 @@ template {
 }
 [hidden] {
   display: none;
+}
+.slick-slide > div {
+  padding-right: 20px;
+}
+.slider-container .slick-arrow {
+  background-color: rgba(var(--white-200-rgb), 1);
+  box-shadow: rgba(var(--base-dark-rgb), 0.2) 0px 3px 5px -1px,
+    rgba(var(--base-dark-rgb), 0.14) 0px 6px 10px 0px,
+    rgba(var(--base-dark-rgb), 0.12) 0px 1px 18px 0px;
+  box-sizing: border-box;
+  font-size: 0px;
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  position: absolute;
+  z-index: 2;
+  display: initial;
+  border: 4px solid transparent;
+  align-self: center;
+  cursor: pointer;
+}
+.slider-container .slick-prev:hover,
+.slider-container .slick-prev:focus,
+.slider-container .slick-next:hover,
+.slider-container .slick-next:focus {
+  background-color: rgba(var(--white-100-rgb), 1);
+}
+.slick-arrow.slick-disabled {
+  display: none !important;
+}
+.slick-arrow.slick-arrow.slick-next {
+  left: unset;
+}
+.slick-arrow.slick-arrow.slick-prev {
+  right: unset;
+}
+.slick-arrow.slick-next::before,
+.slick-arrow.slick-prev::before {
+  box-sizing: border-box;
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  content: "";
+  border-right: 2px solid rgba(var(--grey-100-rgb), 1);
+  border-bottom: 2px solid rgba(var(--grey-100-rgb), 1);
+  border-top: 0px;
+  border-left: 0px;
+  font-size: 13.5px;
+  color: rgba(var(--gray-900-rgb), 1);
+  font-weight: bold;
+}
+.slick-arrow.slick-next::before {
+  transform: rotate(-45deg);
+  left: 8px;
+  top: 9px;
+}
+.slick-arrow.slick-prev::before {
+  transform: rotate(135deg);
+  left: 10px;
+  top: 9px;
 }
